@@ -1,5 +1,11 @@
 2009-02-25  Don Porter  <dgp@users.sourceforge.net>
 
+	* generic/tclUtil.c (TclStringMatchObj):	Revised the branching
+	on the strObj->typePtr so that untyped values get converted to the
+	"string" type and pass through the Unicode matcher.  [Bug 2613766]
+	Also added checks to only perform "bytearray" optimization on pure
+	bytearray values.  [Bug 2637173].
+
 	* generic/tclCmdMZ.c:	Since Tcl_GetCharLength() has its own
 	* generic/tclExecute.c:	optimizations for the tclByteArrayType, stop
 	having the callers do them.
